--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
+
+// font-family: "Barlow Semi Condensed", serif;
+// font-weight: 500 - 600
+// font-sixe: 13px
+
+$Mobile: 375px;
+$Desktop: 1440px;
+
+$ModerateViolet: hsl(263, 55%, 52%);
+$VeryDarkGrayishBlue: hsl(217, 19%, 35%);
+$VeryDarkBlackishBlue: hsl(219, 29%, 14%);
+$White: hsl(0, 0%, 100%);
+
+$LightGray: hsl(0, 0%, 81%);
+$LightGrayishBlue: hsl(210, 46%, 95%);
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: "Barlow Semi Condensed", serif;
+  font-weight: 500 - 600;
+  font-size: 13px;
+}
