FEAT text of the templeate

--- a/src/card/card.component.html
+++ b/src/card/card.component.html
@@ -1,1 +1,8 @@
-<p>card works!</p>
+<article class="container">
+  <div class="img-container">
+    <img
+      src="{{ cardInfo()?.profileImg }}"
+      alt="Alt profile image of the testimony person"
+    />
+  </div>
+</article>
