--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,6 @@ body {
   height: 100%;
   margin: 0;
   font-family: "Barlow Semi Condensed", serif;
-  font-weight: 500 - 600;
+  font-weight: 500;
   font-size: 13px;
 }
