IMPROVEMENT card component styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 @let $ModerateViolet = "hsl(263, 55%, 52%)"; @let $VeryDarkGrayishBlue=
 "hsl(217, 19%, 35%)"; @let $White= "hsl(0, 0%, 100%)"; @let
-$VeryDarkBlackishBlue= "hsl(219, 29%, 14%)";
+$VeryDarkBlackishBlue= "hsl(219, 29%, 14%)"; @let $LightGrayishBlue =
+"hsl(210,46%,95%)";
 
 <main class="container">
   <app-card
@@ -10,8 +11,8 @@ $VeryDarkBlackishBlue= "hsl(219, 29%, 14%)";
       shortTestimony:
         'I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny´s worth.',
       largeTestimony:
-        'I was an EMT for many years before I joined the bootcamp. I´ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I´ve successfully switched careers, working as a Software Engineer at a VR startup',
-      color: { color: $White, backgroundColor: $ModerateViolet }
+        'I was an EMT for many years before I joined the bootcamp. I´ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I´ve successfully switched careers, working as a Software Engineer at a VR startup.',
+      color: { color: $LightGrayishBlue, backgroundColor: $ModerateViolet }
     }"
   ></app-card>
   <app-card
@@ -21,7 +22,7 @@ $VeryDarkBlackishBlue= "hsl(219, 29%, 14%)";
       shortTestimony: 'The team was very supportive and kept me motivated',
       largeTestimony:
         'I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I`ve made in myself.',
-      color: { color: $White, backgroundColor: $VeryDarkGrayishBlue }
+      color: { color: $LightGrayishBlue, backgroundColor: $VeryDarkGrayishBlue }
     }"
   ></app-card>
   <app-card
@@ -42,7 +43,10 @@ $VeryDarkBlackishBlue= "hsl(219, 29%, 14%)";
         'Awesome teaching support from TAs who did the bootcamp themselves. Getting  guidance from them and learning from their experiences was easy.',
       largeTestimony:
         'The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people.',
-      color: { color: $White, backgroundColor: $VeryDarkBlackishBlue }
+      color: {
+        color: $LightGrayishBlue,
+        backgroundColor: $VeryDarkBlackishBlue
+      }
     }"
   ></app-card>
   <app-card
