--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,4 +23,5 @@ body {
   font-family: "Barlow Semi Condensed", serif;
   font-weight: 500;
   font-size: 13px;
+  background-color: $LightGrayishBlue;
 }
