IMPROVEMENTS not ready yet

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,7 @@ $VeryDarkBlackishBlue= "hsl(219, 29%, 14%)"; @let $LightGrayishBlue =
     }"
   ></app-card>
   <app-card
+    class="fourth-child"
     [cardInfo]="{
       profileImg: './images/image-patrick.jpg',
       name: 'Patrick Abrams',
