--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,13 @@ body {
   font-size: 13px;
   background-color: $LightGrayishBlue;
 }
+
+app-root {
+  height: 100%;
+  @media (min-width: 900px) {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
