--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,22 @@
 .container {
-  @media (min-width: 900px) {
-    max-width: 85%;
-    max-height: 85%;
+  display: grid;
+  gap: 2rem;
+  margin: 4rem 2rem;
+  max-width: 700px;
+  @media (min-width: 1200px) {
+    max-width: 80%;
+    max-height: 80%;
     display: grid;
-    // gap: 5rem;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-auto-flow: row;
-
-    // align-items: fit-content;
-    app-card:first-child {
-      grid-area: 1 / 1 / 2 / 3;
+    gap: 2rem;
+    app-card {
+      display: inherit;
     }
     app-card:last-child {
       grid-area: 1 / 4 / 3 / 5;
     }
-    .fourth-child {
-      grid-area: 2 / 2 / 3 / 4;
+    .grid-col-span-2 {
+      grid-column: span 2;
     }
   }
 }
