--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,8 +28,9 @@ body {
 
 app-root {
   height: 100%;
-  @media (min-width: 900px) {
-    height: 100%;
+  display: grid;
+  justify-content: center;
+  @media (min-width: 1200px) {
     display: flex;
     justify-content: center;
     align-items: center;
